# drf-crud-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: endpoints.py  models.py  serializers.py  urls.py
api/migrations/: 0001_initial.py  0002_todo_description.py
drf_project/: settings.py  urls.py
