[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["javapagar <apariciogarcia.j@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
